--- a/paste/html/paste.html
+++ b/paste/html/paste.html
@@ -37,6 +37,7 @@
 			<h3>{name}</h3>
 
 			<p>Date: {date}</p>
+			<p>Expires: {expire}</p>
 			<p>Language: {language}</p>
 
 			<div class="container highlight">
