fix missing ids

--- a/paste/html/index.html
+++ b/paste/html/index.html
@@ -23,7 +23,7 @@
 					<tr>
 						<td><label for="language">Language:</label></td>
 						<td>
-							<select name="language">
+							<select id="language" name="language">
 								<option value="text/plain">Text</option>
 
 								<option disabled>──────────</option>
@@ -128,7 +128,7 @@
 					</tr>
 					<tr>
 						<td><label for="code">Code:</label></td>
-						<td><textarea name="code"></textarea></td>
+						<td><textarea id="code" name="code"></textarea></td>
 					</tr>
 					<tr>
 						<td><label for="alias">Alias:</label></td>
