add perl to languages

--- a/paste/html/index.html
+++ b/paste/html/index.html
@@ -57,6 +57,7 @@
 								<option value="text/matlab">Matlab</option>
 								<option value="text/x-ocaml">OCaml</option>
 								<option value="text/x-objective-c">Objective-C</option>
+								<option value="text/x-perl">Perl</option>
 								<option value="application/x-php">PHP</option>
 								<option value="text/rust">Rust</option>
 								<option value="text/x-scala">Scala</option>
