add support for more languages including those without a mime type

--- a/paste/html/index.html
+++ b/paste/html/index.html
@@ -24,106 +24,7 @@
 						<td><label for="language">Language:</label></td>
 						<td>
 							<select id="language" name="language">
-								<option value="text/plain">Text</option>
-
-								<option disabled>──────────</option>
-								<option disabled>Popular Languages</option>
-
-								<option value="text/x-python">Python</option>
-								<option value="application/x-ruby">Ruby</option>
-								<option value="text/x-gosrc">Go</option>
-								<option value="application/javascript">JavaScript</option>
-								<option value="text/x-java">Java</option>
-								<option value="text/x-swift">Swift</option>
-								<option value="text/x-csharp">C#</option>
-								<option value="text/x-csrc">C</option>
-								<option value="text/x-c++src">C++</option>
-
-								<option disabled>──────────</option>
-								<option disabled>Programming Languages</option>
-
-								<option value="application/x-actionscript">ActionScript</option>
-								<option value="application/x-actionscript3">ActionScript3</option>
-								<option value="text/x-arduino">Arduino</option>
-								<option value="text/coffeescript">CoffeeScript</option>
-								<option value="text/x-dsrc">D</option>
-								<option value="text/x-erlang">Erlang</option>
-								<option value="text/x-fortran">Fortran</option>
-								<option value="text/x-glslsrc">GLSL</option>
-								<option value="text/x-haskell">Haskell</option>
-								<option value="text/x-julia">Julia</option>
-								<option value="text/x-common-lisp">Lisp</option>
-								<option value="text/x-lua">Lua</option>
-								<option value="text/matlab">Matlab</option>
-								<option value="text/x-ocaml">OCaml</option>
-								<option value="text/x-objective-c">Objective-C</option>
-								<option value="text/x-perl">Perl</option>
-								<option value="application/x-php">PHP</option>
-								<option value="text/rust">Rust</option>
-								<option value="text/x-scala">Scala</option>
-								<option value="text/x-scheme">Scheme</option>
-								<option value="text/x-typescript">TypeScript</option>
-								<option value="text/x-vala">Vala</option>
-
-								<option disabled>──────────</option>
-								<option disabled>Low-Level Languages</option>
-
-								<option value="text/x-gas">ASM</option>
-								<option value="text/x-nasm">NASM</option>
-								<option value="text/x-windows-registry">Registry</option>
-								<option value="text/x-vhdl">VHDL</option>
-								<option value="text/x-verilog">Verilog</option>
-
-								<option disabled>──────────</option>
-								<option disabled>Markup Languages</option>
-
-								<option value="text/html">HTML</option>
-								<option value="text/css">CSS</option>
-								<option value="text/x-gnuplot">Gnuplot</option>
-								<option value="application/json">JSON</option>
-								<option value="text/x-less-css">Less</option>
-								<option value="application/postscript">Postscript</option>
-								<option value="text/x-sass">Sass</option>
-								<option value="text/x-scss">SCSS</option>
-								<option value="text/x-tex">TeX</option>
-								<option value="text/xml">XML</option>
-								<option value="text/x-yaml">YAML</option>
-
-								<option disabled>──────────</option>
-								<option disabled>Shell Languages</option>
-
-								<option value="application/x-fish">Fish</option>
-								<option value="text/x-powershell">PowerShell</option>
-								<option value="application/x-sh">Shell</option>
-
-								<option disabled>──────────</option>
-								<option disabled>Configuration Languages</option>
-
-								<option value="text/x-apacheconf">Apache</option>
-								<option value="text/x-dockerfile-config">Docker</option>
-								<option value="text/x-ini">INI</option>
-								<option value="text/x-nginx-conf">Nginx</option>
-								<option value="text/x-java-properties">Properties</option>
-								<option value="text/x-vim">Vim</option>
-
-								<option disabled>──────────</option>
-								<option disabled>Code Building Languages</option>
-
-								<option value="text/x-cmake">CMake</option>
-								<option value="text/x-makefile">Makefile</option>
-
-								<option disabled>──────────</option>
-								<option disabled>Specification Languages</option>
-
-								<option value="text/x-bnf">BNF</option>
-								<option value="application/xml-dtd">DTD</option>
-
-								<option disabled>──────────</option>
-								<option disabled>Other Languages</option>
-
-								<option value="text/x-diff">Diff</option>
-								<option value="text/x-irclog">IRC</option>
-								<option value="text/x-sql">SQL</option>
+								{langauges}
 							</select>
 						</td>
 					</tr>
