add more alias checking

--- a/paste/html/index.html
+++ b/paste/html/index.html
@@ -24,7 +24,7 @@
 						<td><label for="language">Language:</label></td>
 						<td>
 							<select id="language" name="language">
-								{langauges}
+								{languages}
 							</select>
 						</td>
 					</tr>
