make html a bit more semantic

--- a/paste/html/paste.html
+++ b/paste/html/paste.html
@@ -4,7 +4,7 @@
 		<title>paste - {name}</title>
 
 		<style>
-			.header {{
+			.heading {{
 				display: table;
 
 				width: 100%;
@@ -56,16 +56,16 @@
 		<main>
 			<h3>{name}</h3>
 
-			<div class="header">
-				<span class="details">
+			<div class="heading">
+				<div class="details">
 					<p>Date: {date}</p>
 					<p>Expires: {expire}</p>
 					<p>Language: {language}</p>
-				</span>
+				</div>
 
-				<span class="links">
+				<div class="links">
 					<p><a href="{raw}">View Raw</a></p>
-				</span>
+				</div>
 			</div>
 
 			<div class="container highlight">
